--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,2 +1,20 @@
 @use './partials/variables' as *;
-@use './partials/_mixin' as *;
+@use './partials/reset' as *;
+@use './partials/variables' as *;
+@use './partials/typo' as *;
+
+
+img {
+  max-width: 100%;
+}
+li{
+  list-style: none;
+}
+body {
+  background-color: $primary_color;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
